--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,7 @@ body .nav-active {
 @media(min-width:575px){
     .container{
         max-width: 500px;
-        width: 100px;
+        width: 100%;
         margin-inline: auto;
     }
     .header .container{
@@ -403,12 +403,14 @@ body .nav-active {
 /*responsive for larger than 768px screen*/
 @media(min-width:768px){
     :root{
+        /*change typography and font-size*/
         --fontSize-1: 5.5rem;
         --fontSize-2: 4rem;
-
+            /*spacing change*/
         --section-spacing: 150px;
 
     }
+    /*reusued style*/
     .container{
         max-width: 720px;
     }
@@ -428,8 +430,184 @@ body .nav-active {
     .btn-secondary:is(:hover, :focus-visible){
         background-color: var(--bg-blue-jeans);
     }
+    /*header*/
     .header .btn{
         display: grid;
         margin-inline: auto 30px;
+    }
+    /*HERO*/
+    .hero{
+        padding-block: 180px;
+    }
+    .hero-content{
+        max-width: 560px;
+    }
+    .hero .input-wrapper{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+    .hero .btn{
+        margin-block-start: 0;
+        min-width: max-content;
+    }
+    .hero-banner{
+        position: relative;
+        max-width:  540px;
+        margin-inline: auto;
+    }
+    .hero .shape{
+        display: block;
+        position: absolute;
+        filter: var(--shadow-2);
+    }
+    .hero .shape-1{
+        width: 13%;
+        top:350px;
+        left: 80px;
+    }
+    .hero .shape-2{
+        width: 16%;
+        top: 440px;
+        left: -20px;
+    }
+    .hero .shape-3{
+        width: 20%;
+        bottom: -20px;
+        left: 80px;
+    }
+    /*FOOTER*/
+    .footer-list{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+/*MEDIA QUERIES*/
+/*responsive for larger than 992px screen*/
+@media(min-width:992px){
+    /*reused styles*/
+    .container{
+        max-width: 960px;
+        padding-inline: 40px ;
+    }
+    body.nav-active{
+        overflow: auto;
+    }
+    /*header*/
+    .nav-open-btn, .overlay{
+        display: none;
+    }
+    .header .logo img{
+        width: max-content;
+    }
+    .navbar, .navbar.active{
+        all: unset;
+        margin-inline-start: 80px;
+    }
+    .navbar-list{
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+    .navbar-list > li:not(:last-child){
+        margin-block-end: 0;
+    }
+    .navbar-link{
+        color: var(--text-white);
+        transition: var(--transition-1);
+    }
+    .navbar-link:is(:hover, :focus-visible){
+        color: var(--text-white-alpha-60);
+    }
+    .header .btn{
+        margin-inline-end: 0;
+    }
+    /*hero*/
+    .hero .container{
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+    }
+
+    /*process*/
+    .process-banner{
+        display: block;
+        max-width: 540px;
+        margin-inline: auto;
+    }
+    .process .wrapper{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        gap: 60px;
+    }
+    .process-item{
+        text-align: left;
+    }
+    .process-item .item-icon{
+        margin-inline: 0;
+    }
+    .process .grid-list{
+        gap: 30px 40px;
+    }
+    /*WORK*/
+    .works .grid-list{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    /*FOOTER*/
+    .footer-top .container{
+        grid-template-columns: 0.5fr 1fr;
+    }
+    .footer-bottom .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .footer-bottom-list{
+        margin-block-start: 0;
+        gap: 50px;
+    }
+}
+/*RESPPONSIVE FOR LARGER THAN 1200PX SCREEN*/
+@media (min-width: 1200px) {
+    /*custom property*/
+    :root{
+        /*typography*/
+        --fontSize-1: 7rem;
+        --fontSize-3: 2.8rem;
+    }
+    /*reused style*/
+    .container{
+        max-width: 1140px;
+    }
+    .section-text{
+        max-width: 750px;
+    }
+}
+/*RESPPONSIVE FOR LARGER THAN 1400PX SCREEN*/
+@media (min-width: 1400px) {
+    :root{
+        --fontSize-1: 8rem;
+    }
+    .container{
+        max-width: 1350px;
+    }
+    .section-text{
+        margin-block-end: 60px;
+    }
+    .hero-text{
+        font-size: 1.8rem;
+        margin-block: 40px;
+    }
+    .process .wrapper{
+        grid-template-columns: 0.7fr 1fr;
+        gap: 130px;
+    }
+    .process-item .item-icon{
+        width: 80px;
+    }
+    .process-item .item-title{
+        margin-block: 25px 15px;
+    }
+    .process .grid-list{
+        row-gap: 50px;
     }
 }
